CSS refactor: Fix duplicated & outdate px across light/dark modes
Do not place px in light or dark mode css instead use the shared
cool.css :root for that
- This avoid outdated values in the future
  - There was already one like that: --annotation-input-size
  had different values between light and dark mode

--- a/browser/css/color-palette.css
+++ b/browser/css/color-palette.css
@@ -37,15 +37,4 @@
 	--color-success: #46ba61;
 
 	--color-box-shadow: rgba(77, 77, 77, 0.5);
-	--border-radius: 4px; /* buttons, widgets */
-	--border-radius-large: 10px; /* dialog */
-
-	--default-font-size: 12px;
-	--header-font-size: 16px;
-
-	--default-height: 24px;
-	--header-height: 38px;
-
-	/* Annotations */
-	--annotation-input-size: 100px;
 }
